<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalclActivity" >

    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/texteResultat" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valeur_zero"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        
	        <Button
	            android:id="@+id/button1"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:text="@string/bouton01"
	        	android:layout_weight="1" />
	        
	        
		    <Button
		        android:id="@+id/button2"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:text="@string/bouton02"
	        	android:layout_weight="1"  />
	        
		    <Button
		        android:id="@+id/button3"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:text="@string/bouton03"
	        	android:layout_weight="1"  />
	        
				    
		    <Button
		        android:id="@+id/button13"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:text="@string/boutonPlus"
	        	android:layout_weight="1"  />
		    
		    
		    <Button
		        android:id="@+id/Button05"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/boutonPOuvrante"
	        	android:layout_weight="1"  />
		    
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bouton04"
	        	android:layout_weight="1"  />

            
		    <Button
		        android:id="@+id/button5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/bouton05"
	        	android:layout_weight="1"  />
		
		    <Button
		        android:id="@+id/button6"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/bouton06"
	        	android:layout_weight="1"  />
            
		    
		    <Button
		        android:id="@+id/button14"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/boutonMoins"
	        	android:layout_weight="1"  />
		    
		    
		    <Button
		        android:id="@+id/Button04"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/boutonPFermante"
	        	android:layout_weight="1"  />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bouton07"
	        	android:layout_weight="1"  />

            
		    <Button
		        android:id="@+id/button8"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/bouton08"
	        	android:layout_weight="1"  />
            
		    
		    <Button
		        android:id="@+id/button9"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/bouton09"
	        	android:layout_weight="1"  />
		    
		    
		    <Button
		        android:id="@+id/button15"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/boutonMulti"
	        	android:layout_weight="1"  />
		    
		    
		    <Button
		        android:id="@+id/Button01"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/boutonC"
	        	android:layout_weight="1"  />
		    
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boutonP"
	        	android:layout_weight="1"  />

            
		    <Button
		        android:id="@+id/button10"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/bouton00"
	        	android:layout_weight="1"  />
            
		    
		    
		    <Button
		        android:id="@+id/Button02"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:text="@string/CE"
	        	android:layout_weight="1"  />
            
		    
		    <Button
		        android:id="@+id/button16"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/boutonDiv"
	        	android:layout_weight="1"  />
            
		    
		    
		    <Button
		        android:id="@+id/Button03"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/boutonPoint"
	        	android:layout_weight="1"  />
		
		    
		    <Button
		        android:id="@+id/button12"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/bouton17"
	        	android:layout_weight="1"  />
		    
		    
        </TableRow>

        
    </TableLayout>

    


</LinearLayout>