<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcDate" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:text="@string/datedebut" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choixDateDebut"
        android:layout_marginTop="25dp"
        android:text="@string/nombresJours" />

    <TextView
        android:id="@+id/resultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:text="@string/valeur_zero"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/choixDateValeur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toLeftOf="@+id/choixDateDebut"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/choixDateDebut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/editText2"
        android:text="@string/choisirDate" />

    <EditText
        android:id="@+id/choixjours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="@string/valeur_zero" />

    <Button
        android:id="@+id/calcul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choixjours"
        android:layout_marginTop="15dp"
        android:text="@string/calcul" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calcul"
        android:layout_marginTop="32dp"
        android:text="@string/resultat"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>